fix darm mode link color to meet AAA color contrast

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -21,6 +21,6 @@
 	--huge-spacing: 5rem;
 
 	@media (prefers-color-scheme: dark) {
-		--link-color: #a2bdc4;
+		--link-color: #c8e9f1;
 	}
 }
